--- a/variabel.html
+++ b/variabel.html
@@ -26,8 +26,8 @@
       <ul class="menu">
         <div class="menu__item toggle"><span></span></div>
         <li class="menu__item">
-          <a href="index.html" class="link link--dark"
-            ><i class="fa fa-reply"></i> Kembali</a
+          <a href="doc.html" class="link link--dark"
+            ><i class="fa fa-arrow-left"></i> &nbsp;&nbsp;Kembali</a
           >
         </li>
       </ul>
