--- a/doc.html
+++ b/doc.html
@@ -22,7 +22,9 @@
   <body>
     <div class="doc__bg"></div>
     <nav class="header">
-      <h1 class="logo">Scribbler <span class="logo__thin">Doc</span></h1>
+      <h1 class="logo">
+        Dokumentasi <br />Java<span class="logo__thin">Script</span>
+      </h1>
       <ul class="menu">
         <div class="menu__item toggle"><span></span></div>
         <li class="menu__item">
@@ -57,14 +59,10 @@
           <div class="code__block code__block--notabs">
             <pre class="code code--block">
               <code>
-                $ scribbler  ——config
-                  {
-                    “encryption”: true, 
-                    “highlighting“: true,
-                    “prettyTable”: false,
-                    “font”: [“Helvetica”, “sans-serif”],
-                    “folder”: “~/Desktop“
-                  }
+                var price1 = 5;
+                var price2 = 6;
+                var total = price1 + price2;
+                document.getElementById(&quot;demo&quot;).innerHTML =  &quot;The total is: &quot; + total;
               </code>
             </pre>
           </div>
@@ -101,9 +99,7 @@
             </pre>
           </div>
           <br />
-          <a href="variabel.html" class="button--primary" target="_blank"
-            >Coba Kode</a
-          >&nbsp;
+          <a href="variabel.html" class="button--primary">Coba Kode</a>&nbsp;
         </section>
         <section class="js-section">
           <h3 class="section__title">Keybindings</h3>
