--- a/doc.html
+++ b/doc.html
@@ -114,10 +114,10 @@
             Sintaks JavaScript mendefinisikan dua jenis nilai, yaitu Nilai tetap
             dan Nilai variabel. <br />
 
-            &nbsp;&nbsp;<i class="fa fa-angle-right"></i> Nilai tetap disebut
+            &nbsp;&nbsp;<i class="fa fa-hand-o-right"></i> Nilai tetap disebut
             Literal.<br />
-            &nbsp;&nbsp;<i class="fa fa-angle-right"></i> Nilai variabel disebut
-            Variabel .
+            &nbsp;&nbsp;<i class="fa fa-hand-o-right"></i> Nilai variabel
+            disebut Variabel .
           </p>
           <h3 class="section__title__script">Contoh</h3>
           <div class="code__block code__block--notabs">
