--- a/doc.html
+++ b/doc.html
@@ -45,6 +45,24 @@
           <li class="js-btn selected">JavaScript</li>
           <li class="js-btn">Statement</li>
           <li class="js-btn">Syntax</li>
+          <li class="js-btn">Variabel</li>
+          <li class="js-btn">Operator</li>
+          <li class="js-btn">Tipe Data</li>
+          <li class="js-btn">Objek</li>
+          <li class="js-btn">Array</li>
+          <li class="js-btn">Matematika</li>
+          <li class="js-btn">If Else</li>
+          <li class="js-btn">Perulangan For</li>
+          <li class="js-btn">Perulangan While</li>
+          <li class="js-btn">Break</li>
+          <li class="js-btn">Map</li>
+          <li class="js-btn">Errors</li>
+          <li class="js-btn">Kalkulator</li>
+          <li class="js-btn">Snake Game</li>
+          <li class="js-btn">-</li>
+          <li class="js-btn">-</li>
+          <li class="js-btn">-</li>
+          <li class="js-btn">-</li>
           <li class="js-btn">Issues</li>
         </ul>
       </aside>
@@ -131,6 +149,397 @@
             </pre>
             <br />
             <a href="page/syntax.html" class="button--primary">Pelajari</a
+            >&nbsp;
+          </div>
+        </section>
+
+        <!-- Variables -->
+
+        <section class="js-section" style="padding-bottom: 85px">
+          <h3 class="section__title">Variabel</h3>
+          <p>
+            Variabel adalah wadah untuk menyimpan data (menyimpan nilai data).
+          </p>
+          <p>
+            Jika yang di tetapkan adalah aturan umum dan fixs maka deklarasikan
+            variabel dengan const. Jika nilai variabel dapat berubah, gunakan
+            let.
+          </p>
+          <h3 class="section__title__script">Contoh</h3>
+          <div class="code__block code__block--notabs">
+            <pre class="code code--block">
+              <code>
+                const variabel1 = 5;
+                const variabel2 = 6;
+                let total = variabel1 + variabel2;
+              </code>
+            </pre>
+            <br />
+            <a href="page/variabel.html" class="button--primary">Pelajari</a
+            >&nbsp;
+          </div>
+        </section>
+
+        <!-- Operator -->
+
+        <section class="js-section" style="padding-bottom: 85px">
+          <h3 class="section__title">Operator</h3>
+          <p>
+            Variabel adalah wadah untuk menyimpan data (menyimpan nilai data).
+          </p>
+          <p>
+            Jika yang di tetapkan adalah aturan umum dan fixs maka deklarasikan
+            variabel dengan const. Jika nilai variabel dapat berubah, gunakan
+            let.
+          </p>
+          <h3 class="section__title__script">Contoh</h3>
+          <div class="code__block code__block--notabs">
+            <pre class="code code--block">
+              <code>
+                const variabel1 = 5;
+                const variabel2 = 6;
+                let total = variabel1 + variabel2;
+              </code>
+            </pre>
+            <br />
+            <a href="page/variabel.html" class="button--primary">Pelajari</a
+            >&nbsp;
+          </div>
+        </section>
+
+        <!-- Tipe Data -->
+
+        <section class="js-section" style="padding-bottom: 85px">
+          <h3 class="section__title">Tipe Data</h3>
+          <p>
+            Variabel adalah wadah untuk menyimpan data (menyimpan nilai data).
+          </p>
+          <p>
+            Jika yang di tetapkan adalah aturan umum dan fixs maka deklarasikan
+            variabel dengan const. Jika nilai variabel dapat berubah, gunakan
+            let.
+          </p>
+          <h3 class="section__title__script">Contoh</h3>
+          <div class="code__block code__block--notabs">
+            <pre class="code code--block">
+              <code>
+                const variabel1 = 5;
+                const variabel2 = 6;
+                let total = variabel1 + variabel2;
+              </code>
+            </pre>
+            <br />
+            <a href="page/variabel.html" class="button--primary">Pelajari</a
+            >&nbsp;
+          </div>
+        </section>
+
+        <!-- Objek -->
+
+        <section class="js-section" style="padding-bottom: 85px">
+          <h3 class="section__title">Objek</h3>
+          <p>
+            Variabel adalah wadah untuk menyimpan data (menyimpan nilai data).
+          </p>
+          <p>
+            Jika yang di tetapkan adalah aturan umum dan fixs maka deklarasikan
+            variabel dengan const. Jika nilai variabel dapat berubah, gunakan
+            let.
+          </p>
+          <h3 class="section__title__script">Contoh</h3>
+          <div class="code__block code__block--notabs">
+            <pre class="code code--block">
+              <code>
+                const variabel1 = 5;
+                const variabel2 = 6;
+                let total = variabel1 + variabel2;
+              </code>
+            </pre>
+            <br />
+            <a href="page/variabel.html" class="button--primary">Pelajari</a
+            >&nbsp;
+          </div>
+        </section>
+
+        <!-- Array -->
+
+        <section class="js-section" style="padding-bottom: 85px">
+          <h3 class="section__title">Array</h3>
+          <p>
+            Variabel adalah wadah untuk menyimpan data (menyimpan nilai data).
+          </p>
+          <p>
+            Jika yang di tetapkan adalah aturan umum dan fixs maka deklarasikan
+            variabel dengan const. Jika nilai variabel dapat berubah, gunakan
+            let.
+          </p>
+          <h3 class="section__title__script">Contoh</h3>
+          <div class="code__block code__block--notabs">
+            <pre class="code code--block">
+              <code>
+                const variabel1 = 5;
+                const variabel2 = 6;
+                let total = variabel1 + variabel2;
+              </code>
+            </pre>
+            <br />
+            <a href="page/variabel.html" class="button--primary">Pelajari</a
+            >&nbsp;
+          </div>
+        </section>
+
+        <!-- Matematika -->
+
+        <section class="js-section" style="padding-bottom: 85px">
+          <h3 class="section__title">Matematika</h3>
+          <p>
+            Variabel adalah wadah untuk menyimpan data (menyimpan nilai data).
+          </p>
+          <p>
+            Jika yang di tetapkan adalah aturan umum dan fixs maka deklarasikan
+            variabel dengan const. Jika nilai variabel dapat berubah, gunakan
+            let.
+          </p>
+          <h3 class="section__title__script">Contoh</h3>
+          <div class="code__block code__block--notabs">
+            <pre class="code code--block">
+              <code>
+                const variabel1 = 5;
+                const variabel2 = 6;
+                let total = variabel1 + variabel2;
+              </code>
+            </pre>
+            <br />
+            <a href="page/variabel.html" class="button--primary">Pelajari</a
+            >&nbsp;
+          </div>
+        </section>
+
+        <!-- If Else -->
+
+        <section class="js-section" style="padding-bottom: 85px">
+          <h3 class="section__title">If Else</h3>
+          <p>
+            Variabel adalah wadah untuk menyimpan data (menyimpan nilai data).
+          </p>
+          <p>
+            Jika yang di tetapkan adalah aturan umum dan fixs maka deklarasikan
+            variabel dengan const. Jika nilai variabel dapat berubah, gunakan
+            let.
+          </p>
+          <h3 class="section__title__script">Contoh</h3>
+          <div class="code__block code__block--notabs">
+            <pre class="code code--block">
+              <code>
+                const variabel1 = 5;
+                const variabel2 = 6;
+                let total = variabel1 + variabel2;
+              </code>
+            </pre>
+            <br />
+            <a href="page/variabel.html" class="button--primary">Pelajari</a
+            >&nbsp;
+          </div>
+        </section>
+
+        <!-- Perulangan For -->
+
+        <section class="js-section" style="padding-bottom: 85px">
+          <h3 class="section__title">Perulangan For</h3>
+          <p>
+            Variabel adalah wadah untuk menyimpan data (menyimpan nilai data).
+          </p>
+          <p>
+            Jika yang di tetapkan adalah aturan umum dan fixs maka deklarasikan
+            variabel dengan const. Jika nilai variabel dapat berubah, gunakan
+            let.
+          </p>
+          <h3 class="section__title__script">Contoh</h3>
+          <div class="code__block code__block--notabs">
+            <pre class="code code--block">
+              <code>
+                const variabel1 = 5;
+                const variabel2 = 6;
+                let total = variabel1 + variabel2;
+              </code>
+            </pre>
+            <br />
+            <a href="page/variabel.html" class="button--primary">Pelajari</a
+            >&nbsp;
+          </div>
+        </section>
+
+        <!-- Perulangan While -->
+
+        <section class="js-section" style="padding-bottom: 85px">
+          <h3 class="section__title">Perulangan While</h3>
+          <p>
+            Variabel adalah wadah untuk menyimpan data (menyimpan nilai data).
+          </p>
+          <p>
+            Jika yang di tetapkan adalah aturan umum dan fixs maka deklarasikan
+            variabel dengan const. Jika nilai variabel dapat berubah, gunakan
+            let.
+          </p>
+          <h3 class="section__title__script">Contoh</h3>
+          <div class="code__block code__block--notabs">
+            <pre class="code code--block">
+              <code>
+                const variabel1 = 5;
+                const variabel2 = 6;
+                let total = variabel1 + variabel2;
+              </code>
+            </pre>
+            <br />
+            <a href="page/variabel.html" class="button--primary">Pelajari</a
+            >&nbsp;
+          </div>
+        </section>
+
+        <!-- Breaks -->
+
+        <section class="js-section" style="padding-bottom: 85px">
+          <h3 class="section__title">Breaks</h3>
+          <p>
+            Variabel adalah wadah untuk menyimpan data (menyimpan nilai data).
+          </p>
+          <p>
+            Jika yang di tetapkan adalah aturan umum dan fixs maka deklarasikan
+            variabel dengan const. Jika nilai variabel dapat berubah, gunakan
+            let.
+          </p>
+          <h3 class="section__title__script">Contoh</h3>
+          <div class="code__block code__block--notabs">
+            <pre class="code code--block">
+              <code>
+                const variabel1 = 5;
+                const variabel2 = 6;
+                let total = variabel1 + variabel2;
+              </code>
+            </pre>
+            <br />
+            <a href="page/variabel.html" class="button--primary">Pelajari</a
+            >&nbsp;
+          </div>
+        </section>
+
+        <!-- Map -->
+
+        <section class="js-section" style="padding-bottom: 85px">
+          <h3 class="section__title">Map</h3>
+          <p>
+            Variabel adalah wadah untuk menyimpan data (menyimpan nilai data).
+          </p>
+          <p>
+            Jika yang di tetapkan adalah aturan umum dan fixs maka deklarasikan
+            variabel dengan const. Jika nilai variabel dapat berubah, gunakan
+            let.
+          </p>
+          <h3 class="section__title__script">Contoh</h3>
+          <div class="code__block code__block--notabs">
+            <pre class="code code--block">
+              <code>
+                const variabel1 = 5;
+                const variabel2 = 6;
+                let total = variabel1 + variabel2;
+              </code>
+            </pre>
+            <br />
+            <a href="page/variabel.html" class="button--primary">Pelajari</a
+            >&nbsp;
+          </div>
+        </section>
+
+        <!-- Errors -->
+
+        <section class="js-section" style="padding-bottom: 85px">
+          <h3 class="section__title">Errors</h3>
+          <p>
+            Variabel adalah wadah untuk menyimpan data (menyimpan nilai data).
+          </p>
+          <p>
+            Jika yang di tetapkan adalah aturan umum dan fixs maka deklarasikan
+            variabel dengan const. Jika nilai variabel dapat berubah, gunakan
+            let.
+          </p>
+          <h3 class="section__title__script">Contoh</h3>
+          <div class="code__block code__block--notabs">
+            <pre class="code code--block">
+              <code>
+                const variabel1 = 5;
+                const variabel2 = 6;
+                let total = variabel1 + variabel2;
+              </code>
+            </pre>
+            <br />
+            <a href="page/variabel.html" class="button--primary">Pelajari</a
+            >&nbsp;
+          </div>
+        </section>
+
+        <!-- Kalkulator -->
+
+        <section class="js-section" style="padding-bottom: 85px">
+          <h3 class="section__title">Kalkulator</h3>
+          <p>Contoh Kalkulator sederhana yang di buat dari JavaScript</p>
+
+          <h3 class="section__title__script">Program</h3>
+          <div class="code__block code__block--notabs">
+            <pre class="code code--block">
+              <code>
+                function hitung(){
+
+                  var myForm = document.form1;
+                  var x=eval(myForm.x.value);
+                  var y=eval(myForm.y.value);
+                  var pil= myForm.opt.value;
+                  if (pil == "tambah") {
+                  var z = x + y;
+                   }else if (pil == "kurang") {
+                  var z = x - y;
+                   } else if (pil == "kali") {
+                  var z = x * y;
+                   } else if (pil == "bagi") {
+                  var z = x / y;
+                   }
+                   myForm.hasil.value = z;
+                   myForm.x.value = "";
+                   myForm.y.value = "";
+                  }
+                  function resetForm(){
+                  document.form1.reset();
+                  }
+              </code>
+            </pre>
+            <br />
+            <a href="page/kalkulator.html" class="button--primary">Tampilkan</a
+            >&nbsp;
+          </div>
+        </section>
+
+        <!-- Snake Game -->
+
+        <section class="js-section" style="padding-bottom: 85px">
+          <h3 class="section__title">Snake Game</h3>
+          <p>
+            Variabel adalah wadah untuk menyimpan data (menyimpan nilai data).
+          </p>
+          <p>
+            Jika yang di tetapkan adalah aturan umum dan fixs maka deklarasikan
+            variabel dengan const. Jika nilai variabel dapat berubah, gunakan
+            let.
+          </p>
+          <h3 class="section__title__script">Contoh</h3>
+          <div class="code__block code__block--notabs">
+            <pre class="code code--block">
+                      <code>
+                        const variabel1 = 5;
+                        const variabel2 = 6;
+                        let total = variabel1 + variabel2;
+                      </code>
+                    </pre>
+            <br />
+            <a href="page/snake-game.html" class="button--primary">Pelajari</a
             >&nbsp;
           </div>
         </section>
