--- a/doc.html
+++ b/doc.html
@@ -59,7 +59,7 @@
           <li class="js-btn">Errors</li>
           <li class="js-btn">Kalkulator</li>
           <li class="js-btn">Snake Game</li>
-          <li class="js-btn">-</li>
+          <li class="js-btn">Car Game</li>
           <li class="js-btn">-</li>
           <li class="js-btn">-</li>
           <li class="js-btn">-</li>
@@ -91,8 +91,7 @@
           <p>
             Awalnya, JavaScript bernama LiveScript, yang kemudian diubah menjadi
             JavaScript agar bisa menjadi “teman” bagi bahasa pemrograman Java
-            milik mitra mereka, Sun Microsystems. Kami akan menjelaskan
-            perbedaan Java dan JavaScript nanti.
+            milik mitra mereka, Sun Microsystems.
           </p>
         </section>
 
@@ -100,6 +99,10 @@
 
         <section class="js-section" style="padding-bottom: 85px">
           <h3 class="section__title">Statement</h3>
+          <p>
+            Statement atau pernyataan pada javascript adalah suatu instruksi
+            yang di tulis dalam program untuk menjalankan suatu program.
+          </p>
           <p>
             Pada JavaScript statement terdiri dari Nilai, Operator, Ekspresi,
             Kata Kunci, dan Komentar.
@@ -115,8 +118,7 @@
               </code>
             </pre>
             <br />
-            <a href="page/statement.html" class="button--primary">Pelajari</a
-            >&nbsp;
+            <a href="page/statement.html" class="button--primary">Coba</a>&nbsp;
           </div>
         </section>
 
@@ -540,6 +542,33 @@
                     </pre>
             <br />
             <a href="page/snake-game.html" class="button--primary">Pelajari</a
+            >&nbsp;
+          </div>
+        </section>
+
+        <!-- Car Game -->
+
+        <section class="js-section" style="padding-bottom: 85px">
+          <h3 class="section__title">Car Game</h3>
+          <p>
+            Variabel adalah wadah untuk menyimpan data (menyimpan nilai data).
+          </p>
+          <p>
+            Jika yang di tetapkan adalah aturan umum dan fixs maka deklarasikan
+            variabel dengan const. Jika nilai variabel dapat berubah, gunakan
+            let.
+          </p>
+          <h3 class="section__title__script">Contoh</h3>
+          <div class="code__block code__block--notabs">
+            <pre class="code code--block">
+                      <code>
+                        const variabel1 = 5;
+                        const variabel2 = 6;
+                        let total = variabel1 + variabel2;
+                      </code>
+                    </pre>
+            <br />
+            <a href="page/moster-game.html" class="button--primary">Pelajari</a
             >&nbsp;
           </div>
         </section>
