--- a/doc.html
+++ b/doc.html
@@ -96,7 +96,6 @@
         </section>
 
         <!-- Statement -->
-
         <section class="js-section" style="padding-bottom: 85px">
           <h3 class="section__title">Statement</h3>
           <p>
@@ -123,12 +122,11 @@
         </section>
 
         <!-- Syntax -->
-
         <section class="js-section" style="padding-bottom: 85px">
           <h3 class="section__title">Syntax</h3>
           <p>
             Sintaks JavaScript adalah seperangkat aturan, pola umum agar Program
-            JavaScript dibangun.
+            JavaScript dapat dibangun.
           </p>
           <p>
             Sintaks JavaScript mendefinisikan dua jenis nilai, yaitu Nilai tetap
@@ -150,8 +148,7 @@
               </code>
             </pre>
             <br />
-            <a href="page/syntax.html" class="button--primary">Pelajari</a
-            >&nbsp;
+            <a href="page/syntax.html" class="button--primary">Coba</a>&nbsp;
           </div>
         </section>
 
