--- a/doc.html
+++ b/doc.html
@@ -132,10 +132,10 @@
             Sintaks JavaScript mendefinisikan dua jenis nilai, yaitu Nilai tetap
             dan Nilai variabel. <br />
 
-            &nbsp;&nbsp;<i class="fa fa-hand-o-right"></i> Nilai tetap disebut
+            &nbsp;&nbsp;<i class="fa fa-lightbulb-o"></i> Nilai tetap disebut
             Literal.<br />
-            &nbsp;&nbsp;<i class="fa fa-hand-o-right"></i> Nilai variabel
-            disebut Variabel .
+            &nbsp;&nbsp;<i class="fa fa-lightbulb-o"></i> Nilai variabel disebut
+            Variabel .
           </p>
           <h3 class="section__title__script">Contoh</h3>
           <div class="code__block code__block--notabs">
@@ -153,11 +153,15 @@
         </section>
 
         <!-- Variables -->
-
         <section class="js-section" style="padding-bottom: 85px">
           <h3 class="section__title">Variabel</h3>
           <p>
             Variabel adalah wadah untuk menyimpan data (menyimpan nilai data).
+          </p>
+          <p>
+            Di dalam JavaScript, sebuah variabel bisa di isi dengan data apa
+            saja, apakah itu teks, angka, atau data lain yang lebih kompleks
+            seperti object.
           </p>
           <p>
             Jika yang di tetapkan adalah aturan umum dan fixs maka deklarasikan
@@ -174,8 +178,7 @@
               </code>
             </pre>
             <br />
-            <a href="page/variabel.html" class="button--primary">Pelajari</a
-            >&nbsp;
+            <a href="page/variabel.html" class="button--primary">Coba</a>&nbsp;
           </div>
         </section>
 
