--- a/doc.html
+++ b/doc.html
@@ -172,9 +172,9 @@
           <div class="code__block code__block--notabs">
             <pre class="code code--block">
               <code>
-                const variabel1 = 5;
-                const variabel2 = 6;
-                let total = variabel1 + variabel2;
+                const var1 = 5;
+                const var2 = 6;
+                let total = var1 + var2;
               </code>
             </pre>
             <br />
@@ -183,29 +183,34 @@
         </section>
 
         <!-- Operator -->
-
         <section class="js-section" style="padding-bottom: 85px">
           <h3 class="section__title">Operator</h3>
           <p>
-            Variabel adalah wadah untuk menyimpan data (menyimpan nilai data).
+            Operator pada Javascript adalah mekanisme yang bisa digunakan untuk
+            mengeksekusi berbagai jenis perhitungan, kalkulasi dan perbandingan
+            di dalam sintaksis Javascript.
           </p>
           <p>
-            Jika yang di tetapkan adalah aturan umum dan fixs maka deklarasikan
-            variabel dengan const. Jika nilai variabel dapat berubah, gunakan
-            let.
+            Pada dasarnya terdapat 6 jenis operator Javascript. Tipe-tipe
+            operator yang umum dipakai dalam Javascript adalah:
+            <br />
+            <i class="fa fa-angle-right"></i> Aritmatika <br />
+            <i class="fa fa-angle-right"></i> Penetapan <br />
+            <i class="fa fa-angle-right"></i> String <br />
+            <i class="fa fa-angle-right"></i> Perbandingan <br />
+            <i class="fa fa-angle-right"></i> Operator logika <br />
+            <i class="fa fa-angle-right"></i> Operator bersyarat
           </p>
           <h3 class="section__title__script">Contoh</h3>
           <div class="code__block code__block--notabs">
             <pre class="code code--block">
               <code>
-                const variabel1 = 5;
-                const variabel2 = 6;
-                let total = variabel1 + variabel2;
+                let a = 3;
+                let x = (100 + 50) * a;
               </code>
             </pre>
             <br />
-            <a href="page/variabel.html" class="button--primary">Pelajari</a
-            >&nbsp;
+            <a href="page/Operator.html" class="button--primary">Coba</a>&nbsp;
           </div>
         </section>
 
