--- a/doc.html
+++ b/doc.html
@@ -210,7 +210,7 @@
               </code>
             </pre>
             <br />
-            <a href="page/Operator.html" class="button--primary">Coba</a>&nbsp;
+            <a href="page/operator.html" class="button--primary">Coba</a>&nbsp;
           </div>
         </section>
 
