--- a/doc.html
+++ b/doc.html
@@ -282,25 +282,32 @@
         <section class="js-section" style="padding-bottom: 85px">
           <h3 class="section__title">Array</h3>
           <p>
-            Variabel adalah wadah untuk menyimpan data (menyimpan nilai data).
+            Array adalah variabel khusus, yang dapat menampung lebih dari satu
+            nilai.
           </p>
           <p>
-            Jika yang di tetapkan adalah aturan umum dan fixs maka deklarasikan
-            variabel dengan const. Jika nilai variabel dapat berubah, gunakan
-            let.
+            Dalam javascript indeks array secara default adalah bilangan bulat
+            yang diawali dengan 0 (nol), tetapi kita dapat mengubah indeks array
+            sesuai dengan keinginan kita.
+          </p>
+          <p>
+            Array dapat menampung banyak nilai di bawah satu nama, dan Anda bisa
+            mengakses nilai-nilai dengan mengacu pada nomor indeks.
           </p>
           <h3 class="section__title__script">Contoh</h3>
           <div class="code__block code__block--notabs">
             <pre class="code code--block">
               <code>
-                const variabel1 = 5;
-                const variabel2 = 6;
-                let total = variabel1 + variabel2;
+                  const cars = [
+                    "Saab",
+                    "Volvo",
+                    "BMW"
+                  ];
+                  document.getElementById("data").innerHTML = cars;
               </code>
             </pre>
             <br />
-            <a href="page/variabel.html" class="button--primary">Pelajari</a
-            >&nbsp;
+            <a href="page/array.html" class="button--primary">Coba</a>&nbsp;
           </div>
         </section>
 
